--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 edition = "2018"
 name = "stm32wb55"
-version = "0.0.1"
+version = "0.1.0"
 authors = ["eupn <eupn@protonmail.com>"]
 categories = ["embedded", "hardware-support", "no-std"]
 description = "Interface to STM32WB55 Bluetooth radios"
@@ -16,13 +16,11 @@ readme = "README.md"
 default = ["stm32wb-hal/rt"]
 
 [dependencies]
+stm32wb-hal = "0.1.0"
 nb = "0.1.1"
 bluetooth-hci = { git = "https://github.com/danielgallagher0/bluetooth-hci" }
 bitflags = "1.0"
 #cortex-m-semihosting = { version = "0.3.5", features = ["jlink-quirks"] }
-
-[dependencies.stm32wb-hal]
-git = "https://github.com/eupn/stm32wb-hal.git"
 
 [dependencies.embedded-hal]
 version = "0.2.3"
