--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,17 +10,11 @@ license = "MIT/Apache-2.0"
 repository = "https://github.com/eupn/stm32wb55"
 readme = "README.md"
 
-[features]
-# This library is used on a STM32WB5x application controller (Cortex-M4F).
-# The library will take over IPCC and mailbox peripherals for low-level communication.
-default = ["stm32wb-hal/rt"]
-
 [dependencies]
-stm32wb-hal = "0.1.0"
+stm32wb-hal = { version = "0.1.0", features = ["rt", "stm32-usbd"] }
 nb = "0.1.1"
 bluetooth-hci = { git = "https://github.com/danielgallagher0/bluetooth-hci" }
 bitflags = "1.0"
-#cortex-m-semihosting = { version = "0.3.5", features = ["jlink-quirks"] }
 
 [dependencies.embedded-hal]
 version = "0.2.3"
@@ -30,3 +24,27 @@ features = ["unproven"]
 version = "1"
 default-features = false
 
+# For examples
+[dev-dependencies]
+cortex-m = "0.6.2"
+stm32wb-pac = "0.2"
+as-slice = "0.1"
+bit_field = "0.10.0"
+heapless = "0.5.3"
+nb = "0.1"
+cortex-m-rtfm = "0.5"
+panic-halt = "0.2.0"
+panic-semihosting = "0.5.0"
+cortex-m-semihosting = { version = "0.3.5", features = ["jlink-quirks"] }
+cortex-m-rt = "0.6.6"
+usb-device = "0.2"
+usbd-serial = "0.1.0"
+
+[profile.dev]
+incremental = false
+codegen-units = 1
+
+[profile.release]
+codegen-units = 1
+debug = true
+lto = true
