--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ heapless = "0.5.3"
 nb = "0.1"
 cortex-m-rtfm = "0.5"
 panic-halt = "0.2.0"
+panic-reset = "0.1.0"
 panic-semihosting = "0.5.0"
 cortex-m-semihosting = { version = "0.3.5", features = ["jlink-quirks"] }
 cortex-m-rt = "0.6.6"
