--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ stm32wb-hal = { version = "0.1.1" }
 nb = "0.1.1"
 bluetooth-hci = { git = "https://github.com/danielgallagher0/bluetooth-hci" }
 bitflags = "1.0"
+bbqueue = "0.4.8"
 
 [dependencies.embedded-hal]
 version = "0.2.3"
