Switch from gdb to probe-run
More streamlined than having an external openocd or similar.
Based on the "new" style code in https://github.com/Tiwalun/stm32wb55-homekit

Signed-off-by: Karl Palsson <karlp@etactica.com>

--- a/.cargo/config
+++ b/.cargo/config
@@ -1,5 +1,6 @@
 [target.'cfg(all(target_arch = "arm", target_os = "none"))']
-runner = "arm-none-eabi-gdb -q"
+#runner = "arm-none-eabi-gdb -q"
+runner = "probe-run --chip stm32wb55rgvx"
 
 rustflags = [
   "-C", "link-arg=-Tlink.x",
