--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ default = ["ms"]
 ms = []
 
 [dependencies]
-stm32wb-hal = { version = "0.1.1" }
+stm32wb-hal = { version = "0.1.1" , features=["xG-package"]}
 nb = "0.1.1"
 bluetooth-hci = "0.1"
 bitflags = "1.0"
@@ -38,11 +38,9 @@ as-slice = "0.1"
 bit_field = "0.10.0"
 heapless = "0.5.3"
 nb = "0.1"
-cortex-m-rtfm = "0.5"
-panic-halt = "0.2.0"
-panic-reset = "0.1.0"
-panic-semihosting = "0.5.0"
-cortex-m-semihosting = { version = "0.3.5", features = ["jlink-quirks"] }
+cortex-m-rtic = "0.5"
+rtt-target = { version = "0.2.0", features = ["cortex-m"]}
+panic-rtt-target = { version = "0.1.0", features = ["cortex-m"] }
 cortex-m-rt = "0.6.6"
 usb-device = "0.2"
 usbd-serial = "0.1.0"
