--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ default = ["ms"]
 ms = []
 
 [dependencies]
-stm32wb-hal = { version = "0.1.1" , features=["xG-package"]}
+stm32wb-hal = { version = "0.1.14" }
 nb = "1.0"
 bluetooth-hci = "0.1"
 bitflags = "1.3"
@@ -32,6 +32,8 @@ default-features = false
 
 # For examples
 [dev-dependencies]
+# Need explicit features here
+stm32wb-hal = { version = "0.1.14" , features=["xG-package", "stm32-usbd"]}
 cortex-m = "0.6.7"
 stm32wb-pac = "0.2"
 as-slice = "0.2"
@@ -40,7 +42,6 @@ heapless = "0.7.5"
 nb = "1.0"
 cortex-m-rtic = "0.5"
 panic-halt = "0.2.0"
-panic-reset = "0.1.0"
 cortex-m-rt = "0.6.7"
 usb-device = "0.2"
 usbd-serial = "0.1.0"
